styles/layout.css
* {
  box-sizing: border-box;
}

html {
  line-height: 1.5;
}

body {
  display: grid;
  grid-template-rows: auto 1fr auto;
  min-height: 100vh;
  width: 100%;
}

main {
  overflow-x: hidden;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  max-width: 100ch;
  margin: 3rem auto;
  padding: 1rem;
}

figcaption {
  text-align: center;
  font-weight: bold;
}

figure * {
  padding: 0.5rem;
}

nav,
footer {
  background-color: black;
  color: white;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 1rem;
  padding: 1em;
}

nav ul,
footer ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  gap: 1em;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

nav a,
footer a {
  color: white;
  text-decoration: none;
  font-weight: bold;
}

nav a:active {
  color: var(--accent);
}

footer {
  flex-wrap: wrap;
}

header {
  text-align: center;
}

header img {
  width: 100%;
  max-height: 350px;
  object-fit: cover;
}

iframe {
  width: 100%;
  max-width: 560px;
  aspect-ratio: 16/9;
  align-self: center;
}

.botones {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

